Fixed bug with z-index

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  z-index: 1;
+  z-index: 150;
   background: var(--bg-primary-box);
   display: flex;
   justify-content: space-between;
@@ -101,7 +101,7 @@
   &__show-button {
     position: absolute;
     bottom: 32px;
-    z-index: 0;
+    z-index: 140;
     left: 0;
     cursor: pointer;
     background-color: var(--bg-primary);
